Fix for parts of some dialogs being inaccessible on small screens. Experimental build.

--- a/src/app/achievement-panel/achievement-panel.component.less
+++ b/src/app/achievement-panel/achievement-panel.component.less
@@ -23,3 +23,8 @@
 .iconButton {
     float: right;
 }
+
+.achievementContainer {
+    max-height: 600px;
+    overflow-y: auto;
+}
