--- a/src/app/ascension-store-modal/ascension-store-modal.component.less
+++ b/src/app/ascension-store-modal/ascension-store-modal.component.less
@@ -11,3 +11,8 @@ td {
 button {
   margin-top: 2px;
 }
+
+.ascensionContainer {
+  max-height: 600px;
+  overflow-y: auto;
+}
