--- a/src/app/manual-store-modal/manual-store-modal.component.less
+++ b/src/app/manual-store-modal/manual-store-modal.component.less
@@ -1,5 +1,10 @@
 @import (reference) "../../styles.less";
 
+.inventoryContainer {
+  max-height: 600px;
+  overflow-y: auto;
+}
+
 .inventoryGrid {
   display: flex;
   flex-wrap: wrap;
